[package]
name = "initium"
version = "0.1.0"
authors = ["Gil Mendes <gil00mendes@gmail.com>"]
publish = false
edition = "2018"

[lib]
name = 'initium'
path = "./src/main.rs"
crate-type = ["staticlib"]

[dependencies]
log = { version = "0.4", default-features = false }
common = { path = "./common" }

[dependencies.platform]
path = "platform/efi"
