[workspace]
resolver = "2"
members = [
	"initium",
	"xtask"
]

[workspace.package]
authors = ["Gil Mendes <gil00mendes@gmail.com>"]
categories = ["bootloader", "no-std"]
edition = "2021"
keywords = ["uefi", "efi"]
license = "MPL-2.0"
repository = "https://github.com/gil0mendes/Initium"

# Enable optimization for xtask itself, not for its dependencies. This speeds up
# OVMF prebuilt decompression without much increase in compilation time.
[profile.dev.package.xtask]
opt-level = 3
