[package]
name = "xtask"
version = "0.0.0"
publish = false

edition.workspace = true

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", default-features = false, features = ["derive", "help", "usage", "std"] }
lzma-rs = "0.3.0"
tempfile = "3.8.0"
fs-err = "2.9.0"
ureq = "2.8.0"
mbrman = "0.5.2"
fatfs = { version = "0.3.6", default-features = false, features = ["alloc", "std"] }
nix = { version = "0.27.1", default-features = false, features = ["fs"] }
tar = "0.4.40"
sha2 = "0.10.8"
serde_json = "1.0.107"
regex = "1.10.2"
