[package]
authors = ["Gil Mendes <gil00mendes@gmail.com>"]
name = "platform"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
uefi = { path = "../../libs/uefi-rs" }
uefi-services = { path = "../../libs/uefi-rs/uefi-services" }
uefi-exts = { path = "../../libs/uefi-rs/uefi-exts" }

arch = { path = "../../arch/x86_64" }

log = { version = "0.4", default-features = false }

[profile]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
