[package]
authors = ["Gil Mendes <gil00mendes@gmail.com>"]
name = "platform"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
arch = { path = "../../arch/x86_64" }

log = { version = "0.4", default-features = false }

# When building using Cargo's `build-std` feature, the `mem` feature of `compiler-builtins`
# does not automatically get enabled. Therefore, we have to manually add support for
# the memory functions.
rlibc = "1.0.0"

uefi = { version = "0.6.0", default-features = false, features = ["logger"] }

[profile]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
